# magic-trace-arm

./: README-arm.md  README.md
src/: backend_intf.ml  collection_mode.ml  collection_mode.mli  dune  perf_tool_backend.ml  trace.ml
src/arm/: arm_endpoint.ml  coresight_detect.ml  dune  opencsd_binding.c  opencsd_binding.h  opencsd_decoder.ml  opencsd_decoder.mli  opencsd_setup.ml  opencsd_stubs.c  platform.ml
